pages/data/data.module.css
.toggle-dropdown svg {
  width: 24px;
  height: auto;
  vertical-align: middle;
}

.toggle-dropdown {
  cursor: pointer;
  width: fit-content;
  height: fit-content;
  background-color: gray;
  border: 1px solid gray;
  position: absolute;
  margin: 5px;
  float: inline-end;
}

.sidebar {
    height: 20vh; 
    border: 1px transparent;
    padding: 0;
    margin-top: 60px;
}

.content-data {
    height: 70vh;
    border: 1px transparent;
}

.no-padding {
    padding: 0 !important;
}
.no-margin{
    margin: 0 !important;
}

@media (min-width: 992px) {
    .sidebar {
        height: 90vh;
    }
    .content-data {
        height: 90vh;
    }
}

